[package]

name = "neovim-rs"
version = "0.0.4"
authors = ["oakes <zsoakes@gmail.com>"]
build = "build.rs"
description = "A library for embedding Neovim inside a Rust project"
license = "Unlicense"
repository = "https://github.com/oakes/neovim-rs"

[lib]

name = "neovim"
crate_type = ["rlib"]
path = "src/lib.rs"
